<resources>
    <string name="app_name">Cafe order</string>
    <string name="hello_title">Добро пожаловать!</string>
    <string name="edit_name_hint">Введите ваше имя:</string>
    <string name="edit_password_hint">Введите пароль:</string>
    <string name="button_create_order_title">СДЕЛАТЬ ЗАКАЗ</string>
    <string name="toast_fill_fields">Все поля должны быть заполнены</string>
    <string name="image_view_description">Логотип</string>
    <string name="hello_user">Привет, %s! Что желаете?</string>
    <string name="tea">чай</string>
    <string name="coffe">кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="chooseDrink">Выберите вид напитка</string>
    <string name="buttonSendDescription">Кнопка сделать заказ</string>
    <string name="default_name">пользователь</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %S\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>
    <string-array name="spinner_coffe_drinks">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>
    <string-array name="spinner_tea_drinks">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>