<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBrown"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWellcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:text="@string/hello_title"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:hint="@string/edit_name_hint" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="8sp"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:hint="@string/edit_password_hint" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:onClick="onClickCreateOrder"
        android:backgroundTint="@color/white"
        android:textColor="@color/darkBrown"
        android:text="@string/button_create_order_title"
        android:textSize="24sp" />
</LinearLayout>
